cncProd/force-app/main/default/objects/Test_Drive__c/Test_Drive__c.object-meta.xml
<CustomObject>
    <label>Test Drive</label>
    <nameField>
        <displayFormat>TD-{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Test Drive ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Drives</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>