cncProd/force-app/main/default/objects/Test_Drive__c/fields/Agree__c.field-meta.xml
<CustomField>
    <fullName>Agree__c</fullName>
    <description>agree to receive sales and marketing communication from Cycle &amp; Carriage Kia/France Pte Ltd</description>
    <label>Agree</label>
    <length>25</length>
    <type>Text</type>
</CustomField>