cncProd/force-app/main/default/objects/Test_Drive__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>IF(ISPICKVAL(Branch_Code__c, &apos;CCI&apos;) , &apos;MB&apos;,
    IF(ISPICKVAL(Branch_Code__c, &apos;CCK&apos;), &apos;KIA&apos;,
        IF(ISPICKVAL(Branch_Code__c, &apos;CCA&apos;), &apos;MIT&apos;,
            IF(ISPICKVAL(Branch_Code__c, &apos;CCF&apos;), IF(AND(NOT(ISBLANK(Model__r.Name)),BEGINS(Model__r.Name,&apos;DS&apos;)), &apos;DS&apos;,&apos;CIT&apos;),&apos;&apos;))))</formula>
    <label>Brand</label>
    <type>Text</type>
</CustomField>