cncProd/force-app/main/default/objects/Test_Drive__c/fields/contactless_test_drive__c.field-meta.xml
<CustomField>
    <fullName>contactless_test_drive__c</fullName>
    <label>contactless test drive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>