cncProd/force-app/main/default/objects/Test_Drive__c/fields/Count_Day__c.field-meta.xml
<CustomField>
    <fullName>Count_Day__c</fullName>
    <formula>FLOOR(NOW() - Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>