cncProd/force-app/main/default/objects/Test_Drive__c/fields/Current_Car_Model__c.field-meta.xml
<CustomField>
    <fullName>Current_Car_Model__c</fullName>
    <formula>Opportunity__r.Name_Used_Car__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Car Model</label>
    <type>Text</type>
</CustomField>