cncProd/force-app/main/default/objects/Test_Drive__c/fields/Current_Car_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Current_Car_Reg_No__c</fullName>
    <label>Current Car Reg No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>