cncProd/force-app/main/default/objects/Test_Drive__c/fields/Customer_NRIC__c.field-meta.xml
<CustomField>
    <fullName>Customer_NRIC__c</fullName>
    <formula>Prospect__r.NRIC_Passport_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer NRIC</label>
    <type>Text</type>
</CustomField>