cncProd/force-app/main/default/objects/Test_Drive__c/fields/Day_Differents__c.field-meta.xml
<CustomField>
    <fullName>Day_Differents__c</fullName>
    <formula>DATEVALUE(LastModifiedDate) -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Differents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>