cncProd/force-app/main/default/objects/Test_Drive__c/fields/Digital_Signature__c.field-meta.xml
<CustomField>
    <fullName>Digital_Signature__c</fullName>
    <description>Digital Signature for test drive user</description>
    <label>Digital Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>