cncProd/force-app/main/default/objects/Test_Drive__c/fields/Do_not_call_customer_for_any_survey__c.field-meta.xml
<CustomField>
    <fullName>Do_not_call_customer_for_any_survey__c</fullName>
    <formula>Prospect__r.Do_not_call_customer_for_any_survey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do not call customer for any survey</label>
    <type>Checkbox</type>
</CustomField>