cncProd/force-app/main/default/objects/Test_Drive__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This field is for the email of the contact or lead of the test drive used in the web test drive booking</description>
    <formula>IF(Prospect__c != null &amp;&amp; Prospect__r.Email  != null,Prospect__r.Email , IF(Lead__c != null &amp;&amp; Lead__r.Email != null,Lead__r.Email,&apos;&apos; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>