cncProd/force-app/main/default/objects/Test_Drive__c/fields/First_SMS_Triggered__c.field-meta.xml
<CustomField>
    <fullName>First_SMS_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual SMS triggered 1</label>
    <type>Checkbox</type>
</CustomField>