cncProd/force-app/main/default/objects/Test_Drive__c/fields/GFB_Post_Test_Drive_Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>GFB_Post_Test_Drive_Survey_URL__c</fullName>
    <formula>&quot;https://cyclecarriage.getfeedback.com/r/uDQ2x9TR?gf_unique=&quot; + Id + &quot;&amp;Test_Drive_ID=&quot; + Id</formula>
    <label>GFB Post Test Drive Survey URL</label>
    <type>Text</type>
</CustomField>