cncProd/force-app/main/default/objects/Test_Drive__c/fields/Has_NRIC_Photo_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Has_NRIC_Photo_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether SC has uploaded NRIC photos during book test drive.
This field is used for reporting purpose</description>
    <label>NRIC Photo Uploaded?</label>
    <type>Checkbox</type>
</CustomField>