cncProd/force-app/main/default/objects/Test_Drive__c/fields/Has_Signature_Populated__c.field-meta.xml
<CustomField>
    <fullName>Has_Signature_Populated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether Signature has been populated during book test drive.
This field is used for reporting purpose</description>
    <label>Signature Populated?</label>
    <type>Checkbox</type>
</CustomField>