cncProd/force-app/main/default/objects/Test_Drive__c/fields/Is_Sales__c.field-meta.xml
<CustomField>
    <fullName>Is_Sales__c</fullName>
    <formula>CONTAINS(Owner:User.Profile.Name, &quot;Sales&quot;)</formula>
    <label>Is Sales</label>
    <type>Checkbox</type>
</CustomField>