cncProd/force-app/main/default/objects/Test_Drive__c/fields/IsOwnerUpdated__c.field-meta.xml
<CustomField>
    <fullName>IsOwnerUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOwnerUpdated</label>
    <type>Checkbox</type>
</CustomField>