cncProd/force-app/main/default/objects/Test_Drive__c/fields/IsWalkin__c.field-meta.xml
<CustomField>
    <fullName>IsWalkin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to tell if Test Drive record is from Walkin Test Drive module</description>
    <label>Is Walkin</label>
    <type>Checkbox</type>
</CustomField>