cncProd/force-app/main/default/objects/Test_Drive__c/fields/Lead_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead_Owner_Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>