cncProd/force-app/main/default/objects/Test_Drive__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <description>This field is for the mobile number of the contact or lead of the test drive used in the web test drive booking</description>
    <formula>IF(Prospect__c != null &amp;&amp; Prospect__r.MobilePhone != null,  Prospect__r.MobilePhone, IF(Lead__c != null &amp;&amp; Lead__r.MobilePhone != null,Lead__r.MobilePhone,&apos;&apos; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MobilePhone</label>
    <type>Text</type>
</CustomField>