cncProd/force-app/main/default/objects/Test_Drive__c/fields/Model_Group__c.field-meta.xml
<CustomField>
    <fullName>Model_Group__c</fullName>
    <formula>Model__r.Model_Group__r.Name</formula>
    <label>Model Group</label>
    <type>Text</type>
</CustomField>