cncProd/force-app/main/default/objects/Test_Drive__c/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Cannot be JCC Contact</errorMessage>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>notEqual</operation>
            <value>JCC</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>Test_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>