cncProd/force-app/main/default/objects/Test_Drive__c/fields/Sales_NRIC__c.field-meta.xml
<CustomField>
    <fullName>Sales_NRIC__c</fullName>
    <formula>Owner:User.NRIC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep NRIC</label>
    <type>Text</type>
</CustomField>