cncProd/force-app/main/default/objects/Test_Drive__c/fields/Sales_Rep_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Mobile__c</fullName>
    <formula>Owner:User.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Mobile</label>
    <type>Text</type>
</CustomField>