cncProd/force-app/main/default/objects/Test_Drive__c/fields/Send_Survey_SMS__c.field-meta.xml
<CustomField>
    <fullName>Send_Survey_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Survey SMS (Automatic)</label>
    <type>Checkbox</type>
</CustomField>