cncProd/force-app/main/default/objects/Test_Drive__c/fields/SMS_Sent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SMS_Sent_Date_Time__c</fullName>
    <label>SMS Sent Date Time</label>
    <type>DateTime</type>
</CustomField>