cncProd/force-app/main/default/objects/Test_Drive__c/fields/SMS_Trigger_Flag__c.field-meta.xml
<CustomField>
    <fullName>SMS_Trigger_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean field to cater for &quot;Update&quot; entry criteria in GFB Test Drive SMS journey</description>
    <label>SMS Trigger Flag</label>
    <type>Checkbox</type>
</CustomField>