cncProd/force-app/main/default/objects/Test_Drive__c/fields/Survey_sent_in_an_earlier_Test_Drive__c.field-meta.xml
<CustomField>
    <fullName>Survey_sent_in_an_earlier_Test_Drive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey sent in an earlier Test Drive</label>
    <type>Checkbox</type>
</CustomField>