cncProd/force-app/main/default/objects/Test_Drive__c/fields/Test_Drive_Source__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Source__c</fullName>
    <label>Test Drive Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>