cncProd/force-app/main/default/objects/Test_Drive__c/fields/Test_Drive_Survey__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Test Drive Survey</label>
    <type>Checkbox</type>
</CustomField>