cncProd/force-app/main/default/objects/Test_Drive__c/fields/TestDrive_Notofications_SalesManager__c.field-meta.xml
<CustomField>
    <fullName>TestDrive_Notofications_SalesManager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestDrive_Notofications_SalesManager</label>
    <type>Checkbox</type>
</CustomField>