cncProd/force-app/main/default/objects/Test_Drive__c/fields/Time_Trigger_05__c.field-meta.xml
<CustomField>
    <fullName>Time_Trigger_05__c</fullName>
    <description>Used to Fire Time based workflow  minutes after a record is created</description>
    <formula>CreatedDate - 0.038</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Trigger 05</label>
    <type>DateTime</type>
</CustomField>