cncProd/force-app/main/default/objects/Test_Drive__c/fields/TModel__c.field-meta.xml
<CustomField>
    <fullName>TModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TModel</label>
    <referenceTo>Model__c</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>Test_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>