cncProd/force-app/main/default/objects/Test_Drive__c/fields/Year_of_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Ownership__c</fullName>
    <formula>Opportunity__r.Year_of_Ownership__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year of Ownership</label>
    <type>Text</type>
</CustomField>