cncProd/force-app/main/default/objects/Test_Drive__c/validationRules/Validation_Start_Test_Drive_IN_OUT.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Start_Test_Drive_IN_OUT</fullName>
    <active>false</active>
    <errorConditionFormula>IF( (ISPICKVAL(Status__c, &quot;In&quot;) || ISPICKVAL(Status__c, &quot;Out&quot;)), True, False) &amp;&amp; NOT( $Setup.Bypass_Automation_Settings__c.Bypass_Validation_Rules__c )</errorConditionFormula>
    <errorMessage>The Test Drive has already been initiated/completed.</errorMessage>
</ValidationRule>