cncProd/force-app/main/default/objects/Test_Drive__c/listViews/All_Citroen_Test_Drives1.listView-meta.xml
<ListView>
    <fullName>All_Citroen_Test_Drives1</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Lead__c</columns>
    <columns>Prospect__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Check_In__c</columns>
    <columns>Check_Out__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch_Code__c</field>
        <operation>equals</operation>
        <value>CCF</value>
    </filters>
    <filters>
        <field>IsWalkin__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Citroen Web Test Drives</label>
    <sharedTo>
        <roleAndSubordinates>CITPC_Sales_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>